--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,104 +1,231 @@
 absl-py==2.1.0
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
+amqp==5.2.0
 annotated-types==0.7.0
+anyio==4.4.0
 asgiref==3.8.1
 astunparse==1.6.3
-cachetools==5.5.0
-certifi==2024.8.30
+async-timeout==4.0.3
+attrs==23.2.0
+backoff==2.2.1
+bcrypt==4.2.0
+beautifulsoup4==4.12.3
+better-profanity==0.7.0
+billiard==4.2.0
+blinker==1.8.2
+build==1.2.1
+cachetools==5.4.0
+cattrs==23.2.3
+celery==5.4.0
+certifi==2024.7.4
+channels==4.1.0
 charset-normalizer==3.3.2
+chroma-hnswlib==0.7.6
+chromadb==0.5.5
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 cmdstanpy==1.2.4
+coloredlogs==15.0.1
 contourpy==1.3.0
+cron-descriptor==1.4.3
+cssselect==1.2.0
 cycler==0.12.1
-Django==5.1.1
+Cython==3.0.11
+decouple==0.0.7
+Deprecated==1.2.14
+dj-database-url==2.2.0
+Django==5.0.7
+django-celery-beat==2.6.0
+django-celery-results==2.5.1
 django-cors-headers==4.4.0
+django-timezone-field==7.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
-filelock==3.16.1
+dnspython==2.6.1
+email_validator==2.2.0
+et-xmlfile==1.1.0
+exceptiongroup==1.2.2
+faiss-cpu==1.8.0.post1
+Faker==28.0.0
+fastapi==0.111.1
+fastapi-cli==0.0.4
+feedfinder2==0.0.4
+feedparser==6.0.11
+filelock==3.15.4
 flatbuffers==24.3.25
 fonttools==4.54.1
-fsspec==2024.9.0
+frozenlist==1.4.1
+fsspec==2024.6.1
 gast==0.6.0
+gitdb==4.0.11
+GitPython==3.1.43
 google-ai-generativelanguage==0.6.10
 google-api-core==2.20.0
-google-api-python-client==2.147.0
-google-auth==2.35.0
+google-api-python-client==2.138.0
+google-auth==2.32.0
 google-auth-httplib2==0.2.0
-google-generativeai
+google-generativeai==0.7.2
 google-pasta==0.2.0
-googleapis-common-protos==1.65.0
+googleapis-common-protos==1.63.2
 grpcio==1.63.2
-grpcio-status==1.63.2
-grpcio-tools==1.63.2
+grpcio-status==1.62.2
+grpcio-tools==1.62.3
+gunicorn==23.0.0
+h11==0.14.0
 h5py==3.12.1
 holidays==0.57
+httpcore==1.0.5
 httplib2==0.22.0
-huggingface-hub==0.25.1
-idna==3.10
-importlib_resources==6.4.5
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.24.2
+humanfriendly==10.0
+idna==3.7
+importlib_metadata==8.0.0
+importlib_resources==6.4.0
+jieba3k==0.35.1
 Jinja2==3.1.4
 joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 keras==3.5.0
 kiwisolver==1.4.7
+kombu==5.3.7
+kubernetes==30.1.0
+langchain==0.2.11
+langchain-core==0.2.24
+langchain-google-genai==1.0.8
+langchain-text-splitters==0.2.2
+langdetect==1.0.9
+langsmith==0.1.93
 libclang==18.1.1
+lxml==5.2.2
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.2
 mdurl==0.1.2
 ml-dtypes==0.4.1
+mmh3==4.1.0
+monotonic==1.6
 mpmath==1.3.0
+multidict==6.0.5
+mysqlclient==2.2.4
 namex==0.0.8
-networkx==3.3
-numpy==1.23.5
+newspaper3k==0.2.8
+nltk==3.8.1
+numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.18.1
+openpyxl==3.1.5
+opentelemetry-api==1.26.0
+opentelemetry-exporter-otlp-proto-common==1.26.0
+opentelemetry-exporter-otlp-proto-grpc==1.26.0
+opentelemetry-instrumentation==0.47b0
+opentelemetry-instrumentation-asgi==0.47b0
+opentelemetry-instrumentation-fastapi==0.47b0
+opentelemetry-proto==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-semantic-conventions==0.47b0
+opentelemetry-util-http==0.47b0
 opt_einsum==3.4.0
 optree==0.12.1
+orjson==3.10.6
+overrides==7.7.0
 packaging==24.1
-pandas==2.2.3
+pandas==2.2.2
 param==2.1.1
 pillow==10.4.0
+platformdirs==4.2.2
 plotly==5.24.1
+posthog==3.5.0
+prompt_toolkit==3.0.47
 prophet==1.1.5
 proto-plus==1.24.0
-protobuf>=3.20.2,<6.0.0
+protobuf==4.25.4
 psycopg2==2.9.9
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pydantic==2.9.2
-pydantic_core==2.23.4
+pyarrow==17.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
 Pygments==2.18.0
-PyJWT==2.9.0
-pyparsing==3.1.4
+PyJWT==2.8.0
+pyparsing==3.1.2
+PyPDF2==3.0.1
+PyPika==0.48.9
+pyproject_hooks==1.1.0
+python-crontab==3.2.0
 python-dateutil==2.9.0.post0
+python-decouple==3.4
 python-dotenv==1.0.1
-pytz==2024.2
-PyYAML==6.0.2
-regex==2024.9.11
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.1
+redis==5.0.8
+referencing==0.35.1
+regex==2024.7.24
 requests==2.32.3
-rich==13.8.1
+requests-cache==1.2.1
+requests-file==2.1.0
+requests-oauthlib==2.0.0
+rest-framework-simplejwt==0.0.2
+rich==13.7.1
+rpds-py==0.19.1
 rsa==4.9
 safetensors==0.4.5
 scikit-learn==1.5.2
 scipy==1.14.1
+sgmllib3k==1.0.0
+shellingham==1.5.4
 six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.31
 sqlparse==0.5.1
 stability-sdk==0.8.6
 stanio==0.5.1
-sympy==1.13.3
-tenacity==9.0.0
+starlette==0.37.2
+streamlit==1.37.0
+sympy==1.13.1
+tenacity==8.5.0
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.4.0
 threadpoolctl==3.5.0
+tinysegmenter==0.3
+tldextract==5.1.2
 tokenizers==0.20.0
-torch==2.4.1
-torchaudio==2.4.1
-torchvision==0.19.1
-tqdm==4.66.5
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.1
+tornado==6.4.1
+tqdm==4.66.4
 transformers==4.45.1
+typer==0.12.3
 typing_extensions==4.12.2
-tzdata==2024.2
+tzdata==2024.1
 uritemplate==4.1.1
-urllib3==2.2.3
+url-normalize==1.4.3
+urllib3==2.2.2
+uvicorn==0.30.3
+uvloop==0.19.0
+vine==5.1.0
+watchfiles==0.22.0
+wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==12.0
 Werkzeug==3.0.4
 wrapt==1.16.0
+yarl==1.9.4
+zipp==3.19.2
