--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -42,6 +42,7 @@ Django==5.0.7
 django-celery-beat==2.6.0
 django-celery-results==2.5.1
 django-cors-headers==4.4.0
+django-heroku==0.3.1
 django-timezone-field==7.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
@@ -150,6 +151,7 @@ prophet==1.1.5
 proto-plus==1.24.0
 protobuf==4.25.4
 psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pyarrow==17.0.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
@@ -226,6 +228,7 @@ wcwidth==0.2.13
 websocket-client==1.8.0
 websockets==12.0
 Werkzeug==3.0.4
+whitenoise==6.7.0
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.19.2
